--- a/src/app.html
+++ b/src/app.html
@@ -3,10 +3,16 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.ico" />
+		<!-- Add these styles to the head of your HTML file --> 
+		<link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css">
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
+		<!-- Add these scripts to the bottom of your HTML file, just before the closing body tag -->
+		<script src="/node_modules/@popperjs/core/dist/umd/popper.min.js"></script>
+		<script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+
 	</body>
 </html>
